<resources>
    <string name="app_name">만렙도전, 직장생활!</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">프로그램 실행</string>
    <string name="previous">Previous</string>

    <string name="appname_ko_KR">만렙도전, 직장 생활!</string>
    <string name="loading">로딩...</string>
    <string name="loading_finished">로딩 완료</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="button_main_start">학습 시작</string>
    <string name="button_main_settings">환경 설정</string>
    <string name="button_main_achievement">달성도 확인</string>
    <string name="button_main_history">학습 내역</string>
    <string name="directory_name_root">ASDryRunnerJ</string>
    <string name="filename_role">role.xml</string>
    <string name="filename_action">action.xml</string>
    <string name="filename_customaction">customaction.xml</string>
    <string name="filename_perceptron">perceptron.xml</string>
    <string name="filename_cause">cause.xml</string>
    <string name="filename_option">option.xml</string>
    <string name="filename_caption">caption.xml</string>
    <string name="filename_scene">scene.xml</string>
    <string name="filename_scenario">scenario.xml</string>
    <string name="filename_context">context.xml</string>
    <string name="filename_media">media.xml</string>
    <string name="filename_metadata">metadata.xml</string>
    <string name="title_lecture_pre">테스트 차시</string>
    <string name="title_lecture_1">1차시</string>
    <string name="title_lecture_2">2차시</string>
    <string name="title_lecture_3">3차시</string>
    <string name="title_lecture_4">4차시</string>
    <string name="title_lecture_5">5차시</string>
    <string name="link_video_1_1">https://vimeo.com/520212046/cdeeabbda7</string>
    <string name="link_video_1_2">https://vimeo.com/520212019/6277754fe2</string>
    <string name="link_video_2_1">https://vimeo.com/519126445/09bdf673ee</string>
    <string name="link_video_2_2">https://vimeo.com/519126497/4a7da3a999</string>
    <string name="link_video_2_3">https://vimeo.com/519126607/4bc9411832</string>
    <string name="link_video_2_4">https://vimeo.com/519126562/8434f42aa9</string>
    <string name="link_video_2_5">https://vimeo.com/519131435/0b4f0e40c4</string>
    <string name="link_video_3_1">https://vimeo.com/519131886/e8f6b8927c</string>
    <string name="link_video_3_2">https://vimeo.com/519131936/bfcd49c349</string>
    <string name="link_video_3_3">https://vimeo.com/519131975/d654c14d4c</string>
    <string name="link_video_4_1">https://vimeo.com/519132036/5382cbe77b</string>
    <string name="link_video_4_2">https://vimeo.com/519132095/8fb168f814</string>
    <string name="link_video_4_3">https://vimeo.com/519132164/2f6628b956</string>
    <string name="link_video_4_4">https://vimeo.com/519132215/a1e5166b0c</string>
    <string name="link_video_4_5">https://vimeo.com/519132269/2a51baaa45</string>
    <string name="link_video_5_1">https://vimeo.com/519132334/6c1a0aaa65</string>
    <string name="link_video_5_2">https://vimeo.com/519132398/d3e7699838</string>
    <string name="link_video_5_3">https://vimeo.com/519132478/4eb98ebea0</string>
    <string name="link_video_5_4">https://vimeo.com/519132521/5df2603072</string>

    <string name="format_role">SerialNumber: %1$s, ActorName: %2$s, Description: %3$s, DefaultValue: %4$s\n</string>
    <string name="title_activity_main">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Lecture fragment</string>
    <string name="button_lt_next">다음</string>
    <string name="button_lt_exit">나가기</string>
    <string name="placeholder_speaker_name">Speaker name</string>
    <string name="placeholder_dialogue">Dialogue</string>
    <string name="message_lecture_end">"다른 수업내용을 공부하고 싶으면 '다른 수업!'을 누르고,\n이대로 끝내려면 '종료하기'를 눌러주세요."</string>
    <string name="button_lend_go_lecture_select">다른 수업!</string>
    <string name="background_corner">Background corner</string>
    <string name="button_lhis_prepare">시작</string>
</resources>