<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
  <ImageView android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:src="@drawable/primary_rect"
      android:contentDescription="@string/background_corner" />

  <LinearLayout
      android:id="@+id/linearLayout2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_row="0"
      android:layout_column="0"
      android:layout_gravity="center_horizontal"
      android:orientation="vertical"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appname_ko_KR"
        android:textSize="32sp" />
  </LinearLayout>

  <Space
      android:id="@+id/space22"
      android:layout_width="200dp"
      android:layout_height="40dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <LinearLayout
      android:id="@+id/linearLayout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_row="1"
      android:layout_column="0"
      android:layout_gravity="center_horizontal"
      android:orientation="horizontal"
      app:layout_constraintBottom_toTopOf="@+id/space22"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">

    <Space
        android:layout_width="32dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btMainStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_main_start" />

    <Space
        android:layout_width="16dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btMainHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_main_history" />

    <Space
        android:layout_width="16dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btMainAchievement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_main_achievement" />

    <Space
        android:layout_width="16dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btMainSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_main_settings" />

    <Space
        android:layout_width="32dp"
        android:layout_height="wrap_content" />
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>