<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LectureEndFragment">

    <GridLayout
        android:id="@+id/grid_learn_end"
        android:columnCount="2"
        android:rowCount="2"
        android:alignmentMode="alignMargins"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="0dp"
            android:layout_rowWeight="2"
            android:layout_row="0"
            android:layout_column="0">
            <androidx.cardview.widget.CardView
                android:layout_margin="4dp"
                android:elevation="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <ImageView
                    android:layout_gravity="center"
                    android:layout_margin="32dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:src="@drawable/icon_smile"/>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_columnWeight="2"
            android:layout_height="0dp"
            android:layout_rowWeight="2"
            android:layout_row="0"
            android:layout_column="1">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:elevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <Space
                        android:id="@+id/space3"
                        android:layout_width="100dp"
                        android:layout_height="4dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Space
                        android:id="@+id/space5"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/content_container"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:visibility="visible"
                        app:layout_constraintBottom_toTopOf="@+id/space4"
                        app:layout_constraintEnd_toStartOf="@+id/space6"
                        app:layout_constraintStart_toEndOf="@+id/space5"
                        app:layout_constraintTop_toBottomOf="@+id/space3"
                        tools:visibility="visible">

                        <TextView
                            android:id="@+id/textView2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            android:text="수고하셨습니다!"
                            android:textAlignment="center"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Space
                            android:id="@+id/space7"
                            android:layout_width="24dp"
                            android:layout_height="4dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView2" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/message_lecture_end"
                            android:textAlignment="center"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/space7" />

                        <Space
                            android:id="@+id/space8"
                            android:layout_width="24dp"
                            android:layout_height="16dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView3" />

                        <Button
                            android:id="@+id/button_lend_go_lecture_select"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="@string/button_lend_go_lecture_select"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/space9"
                            app:layout_constraintTop_toBottomOf="@+id/space8" />

                        <Space
                            android:id="@+id/space9"
                            android:layout_width="24dp"
                            android:layout_height="24dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/space8" />

                        <Button
                            android:id="@+id/button_lend_exit"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="4dp"
                            android:text="@string/button_lt_exit"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/space9"
                            app:layout_constraintTop_toBottomOf="@+id/space8" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <Space
                        android:id="@+id/space6"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <Space
                        android:id="@+id/space4"
                        android:layout_width="100dp"
                        android:layout_height="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_rowSpan="1"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:elevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_lend_speakername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="4dp"
                        android:text=""
                        android:textAlignment="textStart"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="@string/placeholder_speaker_name" />

                    <TextView
                        android:id="@+id/tv_lend_dialogue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="6dp"
                        android:text=""
                        android:textAlignment="textStart"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_lend_speakername"
                        tools:text="@string/placeholder_dialogue" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>




        </androidx.constraintlayout.widget.ConstraintLayout>


    </GridLayout>

</FrameLayout>