<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LectureType3Fragment">

    <GridLayout
        android:id="@+id/grid_learn_type3"
        android:columnCount="2"
        android:rowCount="2"
        android:alignmentMode="alignMargins"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="0dp"
            android:layout_rowWeight="2"
            android:layout_row="0"
            android:layout_column="0">
            <androidx.cardview.widget.CardView
                android:layout_margin="4dp"
                android:elevation="4dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <SurfaceView
                        android:id="@+id/sv_camera"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintBottom_toTopOf="@+id/space16"
                        app:layout_constraintEnd_toStartOf="@+id/space15"
                        app:layout_constraintStart_toEndOf="@+id/space17"
                        app:layout_constraintTop_toBottomOf="@+id/space14" />
                    <ImageView
                        android:id="@+id/iv_pictures"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_gravity="center"
                        android:scaleType="fitCenter"
                        android:src="@drawable/icon_smile"
                        app:layout_constraintBottom_toTopOf="@+id/space16"
                        app:layout_constraintEnd_toStartOf="@+id/space15"
                        app:layout_constraintStart_toEndOf="@+id/space17"
                        app:layout_constraintTop_toBottomOf="@+id/space14" />

                    <Space
                        android:id="@+id/space14"
                        android:layout_width="12dp"
                        android:layout_height="40dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Space
                        android:id="@+id/space17"
                        android:layout_width="12dp"
                        android:layout_height="4dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Space
                        android:id="@+id/space15"
                        android:layout_width="12dp"
                        android:layout_height="4dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Space
                        android:id="@+id/space16"
                        android:layout_width="12dp"
                        android:layout_height="40dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_columnWeight="2"
            android:layout_height="0dp"
            android:layout_rowWeight="2"
            android:layout_row="0"
            android:layout_column="1">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="4dp"
                android:elevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <Space
                        android:id="@+id/space3"
                        android:layout_width="100dp"
                        android:layout_height="8dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Space
                        android:id="@+id/space5"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <FrameLayout
                        android:id="@+id/speech_fragment_container"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:visibility="invisible"
                        app:layout_constraintBottom_toTopOf="@+id/space4"
                        app:layout_constraintEnd_toStartOf="@+id/space6"
                        app:layout_constraintStart_toEndOf="@+id/space5"
                        app:layout_constraintTop_toBottomOf="@+id/space3"
                        tools:visibility="visible" />

                    <Space
                        android:id="@+id/space6"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <Space
                        android:id="@+id/space4"
                        android:layout_width="100dp"
                        android:layout_height="24dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="4dp"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_rowSpan="1"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_columnSpan="2">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="4dp"
                android:elevation="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/button_lt3_next"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_lt3_speakername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="4dp"
                        android:text="@string/placeholder_speaker_name"
                        android:textStyle="bold"
                        android:textAlignment="textStart"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <TextView
                        android:id="@+id/tv_lt3_dialogue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginEnd="12dp"
                        android:text="@string/placeholder_dialogue"
                        android:textAlignment="textStart"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tv_lt3_speakername" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button_lt3_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/button_lt_next"
                android:enabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_lt3_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/button_lt_exit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_lt3_next" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </GridLayout>



</FrameLayout>